applications/k8s-cicd-app/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-cicd-base
  labels:
    name: k8s-cicd-base
    managed-by: argocd
