applications/k8s-cicd-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-cicd-service
  labels:
    app: k8s-cicd-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: k8s-cicd-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
